# reimagined-waffle-workers

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md
.github/workflows/: ci.yml
ai_job_matcher/: __init__.py  engine.py  pyproject.toml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/v1/: admin.py  auth.py  jobs.py  recommendations.py  users.py
backend/app/auth/: dependencies.py  security.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  base.py  job.py  user.py
backend/app/schemas/: admin.py  auth.py  job.py  recommendation.py  user.py
backend/app/services/: __init__.py  engine_service.py
backend/app/tasks/: celery_app.py  jobs.py
backend/tests/: conftest.py  test_auth.py  test_recommendations.py
config/: feature_flags.yaml
frontend/: jest.config.js  package.json  tailwind.config.js
frontend/app/: layout.tsx
frontend/app/(marketing)/: page.tsx
frontend/app/admin/: page.tsx
frontend/app/jobs/: page.tsx
frontend/app/login/: page.tsx
frontend/app/profile/: page.tsx
frontend/hooks/: useAuth.tsx
frontend/lib/: api.ts
frontend/tests/: home.test.tsx
infra/: docker-compose.yml  k6-recommendations.js
infra/dockerfiles/: backend.Dockerfile  frontend.Dockerfile
jobmatch/: __init__.py  data_models.py  datasets.py  engine.py  learning.py  metrics.py  nlp.py  normalization.py  scoring.py
jobmatch/config/: default_weights.yaml  skill_synonyms.yaml
scripts/: seed.py
tests/: test_engine.py  test_learning.py  test_normalization.py  test_scoring.py
(+4 files in other folders)
