[tool.poetry]
name = "jobboard-backend"
version = "0.1.0"
description = "FastAPI backend for AI-powered job board"
authors = ["AI Assistant <ai@example.com>"]
readme = "../README.md"
packages = [
  {include = "app"},
  {include = "ai_job_matcher", from = ".."}
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.110.0"
uvicorn = {extras = ["standard"], version = "0.27.0"}
sqlmodel = "0.0.14"
asyncpg = "0.29.0"
psycopg2-binary = "2.9.9"
python-jose = "3.3.0"
passlib = {extras = ["bcrypt"], version = "1.7.4"}
pyyaml = "6.0.1"
python-multipart = "0.0.6"
celery = "5.3.6"
redis = "5.0.1"
pydantic-settings = "2.2.1"
aiosqlite = "0.19.0"
email-validator = "2.1.0.post1"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"
pytest-asyncio = "0.21.0"
httpx = "0.27.0"
ruff = "0.1.6"
mypy = "1.8.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
